<resources>
    <string name="app_name">AppPlatz</string>
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="send_to">Share</string>
    <string name="splash_screen_tl01">Saia. Faça checkin. Divirta-se!</string>
    <string name="proximo">Próximo</string>

    <string name="descricao_evento">Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos,
        e vem sendo utilizado desde o século XVI</string>
    <!-- Navigation -->
    <string name="action_sort">Sort</string>
    <string name="action_search">Search</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_logout">Logout</string>

    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>

    <string name="lbl_close">Close</string>
    <string name="lbl_open">Open</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Favorite os eventos</string>
    <string name="slide_1_desc">Ajude na popularidade dos Eventos, curta-os!</string>

    <string name="slide_2_title">Ligue o seu GPS</string>
    <string name="slide_2_desc">Acompanhe os eventos mais próximos de sua Cidade! </string>

    <string name="slide_3_title">Faça chekin</string>
    <string name="slide_3_desc">Frequente os melhores lugares e festas do seu Paí!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_eventos">EventosActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_eventos_categorias">EventosCategorias</string>
</resources>
