<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemHome"
            android:icon="@drawable/icon_map"
            android:title="@string/action_home"/>
        <item
            android:id="@+id/navItemProfile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_profile"/>

        <item
            android:id="@+id/navItemInBox"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_inbox"/>

        <item
            android:id="@+id/navItemSetting"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/navItemLogout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_logout"/>
    </group>
</menu>